--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "style-loader": "0.19.0",
     "superagent": "^3.8.1",
     "sw-precache-webpack-plugin": "0.11.4",
